# nexari

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  config-example.yml  docker-compose.test.yml  docker-compose.yml  example.env  main.py  prompt_template.j2  pyproject.toml  requirements.txt  setup.sh  start.sh
.github/workflows/: build.yml  ci-cd.yml  ci.py  cleanup-images.yml  deploy.yml  terraform.yml  test.yml
kubernetes/: deployment.yaml  network-policies.yaml  serviceaccount.yaml
migrations/: env.py
migrations/versions/: 091536e0bd7a_alter_check_constraint_on_message.py  140d9f5227dc_add_simulator_channel_id_to_guild_model.py  223d8d6c2306_add_last_responder_to_channel_model.py  22d6e5a84153_remove_context_length_from_llm_model.py  8225e015e328_add_avatar_column.py  9228082c3eb0_make_names_non_nullable.py  9289efb3cb8d_distinguish_between_webhooks_and_users.py  96cf46bdb0c4_make_channel_id_non_nullable.py  9dc8de884731_init.py  a335bb5c826e_add_simulator_id.py  b06562575ad4_add_timezone_to_message_created_at.py  b83f39732e94_add_user_messages.py  bc628dd8622a_remove_llm_webhook_relationship.py  c3daf9e5f3b7_init.py  d30377cc0647_init.py  d5b145054756_add_llm_enabled.py  f439d02dc75a_init.py  (+2 more)
scripts/: copy_data_to_new_db.py
src/: bot.py  commands.py  config.py  const.py  db.py  health_check.py  llm.py  main.py  simulator.py  util.py
terraform/: main.tf  outputs.tf  providers.tf  startup-script.tpl  terraform.tfvars  terraform.tfvars.example  variables.tf
tests/: test_bot.py  test_health_check.py  test_llm.py  test_util.py
(+47 files in other folders)
