[tool.poetry]
name = "nexari"
version = "0.1.0"
description = "LLM-backed Discord chatbot"
authors = ["Ink Brownell <ink@kaleidoscope.glass>"]
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
discord-py = "2.4.0"
python-dotenv = "1.0.1"
pyyaml = "6.0.2"
litellm = "1.51.1"
pydantic = "2.9.2"
pydantic-settings = "^2.6.0"
sqlalchemy = "2.0.36"
alembic = "1.13.3"
asyncpg = "0.30.0"
aiohttp = "3.10.10"
psycopg2-binary = "2.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "5.0.0"
black = "24.10.0"
mypy = "1.13.0"
dagger-io = "0.13.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
